# OOP

./: .gitignore  README.md
Exceptions and error handling HW08/HW1/: CMakeLists.txt  main.cpp
HW02/: .gitignore  CMakeLists.txt  README.md  main.cpp
HW02.2/: .gitignore  HW02.2.vcxproj  README.md  main.cpp
HW02.3/: .gitignore
HW02.3/HW02.3/: .gitignore  HW02.3.vcxproj  main.cpp
HW03/: CMakeLists.txt  main  main.cpp
HW03.1/: CMakeLists.txt  main  main.cpp
HW05/: main  main.cpp
HW05.1/: main  main.cpp
HW05_1_count_sides/: main  main.cpp
HW06/: CMakeLists.txt  func.cpp  main.cpp
HW06.1/: functions.h
HW06.2/: parallel.h  parallel_func.cpp  r_t_func.cpp  rectangle.h  rectangle_func.cpp  right_tri.h
HW07/: main.cpp
HW07.1/: main.cpp
HW08_Exceptions and error handling/HW02/: CMakeLists.txt  e_t.func.cpp  equil.h  equil_tri.h  error.h  f.function.cpp  figure.h  figure_func.cpp  i_t.func.cpp  isos.h  isos_tri.h  main.cpp  r_t.func.cpp  r_t_func.cpp  right_tri.h  tri.func.cpp  trian.h  triangle_8.h  triangle_func.cpp
HW08_Exceptions and error handling/HW2/: CMakeLists.txt  CMakeSettings.json  Qube.h  e_t_func.cpp  equil.h  figure.h  figure_func.cpp  figurefunc.cpp  isos.cpp  isos.h  main.cpp  manyfiles.sln  manyfiles.vcxproj  manyfiles.vcxproj.filters  parall_func.cpp  parallel.h  quadro.h  quadro_func.cpp  qube_func.cpp  r_t_func.cpp  rec_func.cpp  rectangle.h  rhomb.cpp  rhomb.h  right_tri.h  tri.h  tri_func.cpp  triangle.h
HW08_Exceptions and error handling/HW2/Debug/: manyfiles.exe.recipe  manyfiles.vcxproj.FileListAbsolute.txt  vc143.idb
HW08_Exceptions and error handling/HW2/Debug/manyfiles.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  manyfiles.lastbuildstate
HW08_Exceptions and error handling/HW2/x64/Debug/: manyfiles.exe.recipe  manyfiles.ilk  manyfiles.vcxproj.FileListAbsolute.txt  vc143.idb
HW08_Exceptions and error handling/HW2/x64/Debug/manyfiles.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  manyfiles.lastbuildstate
HW10_Cmake/: main.cpp
HW10_Cmake/HW02/: CMakeLists.txt  figure.h  isos_tri.h  main.cpp  rhomb_func.cpp  triangle.h
HW11_Building and connecting libraries/HW05/: CMakeLists.txt  e_t_func.cpp  figure.h  main.cpp  rhomb.h
HW4/: .gitignore  CMakeLists.txt  main  main.cpp  out  out.txt
HW4.1/: CMakeLists.txt  main.cpp
Simulator_racing/: CMakeLists.txt  air.h  air_func.cpp  choice.h  choice_func.cpp  lenght.h  length_func.cpp  main.cpp  terrain.cpp  terrain.h
kurs/: CMakeLists.txt  main.cpp
(+96 files in other folders)
